<resources>
    <string name="app_name">Quiz</string>
    <string name="welcome">Welcome!</string>
    <string name="lets_play">Let\'s play!</string>
    <string name="categories">Categories</string>
    <string name="mathematics">Mathematics</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="programming">Computers</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="ex_text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit?</string>
    <string name="next">Next</string>
    <string name="try_again">Try again</string>
    <string name="start_quiz">Start</string>
    <string name="congrats">Congrats! You passed :)</string>
    <string name="hits">You hit %d out of 10 questions</string>
    <string name="time">Time: %d seconds</string>
    <string name="exit">Exit</string>
    <string name="fail">Oh no! You failed :(</string>
    <string name="sad_face">Sad face</string>
    <string name="happy_face">Happy face</string>
    <string name="select_answer">Please, select an answer.</string>
    <string name="ops">Ops!</string>
</resources>