<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.me.quiz.ResultActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="100dp"
        tools:src="@drawable/victory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/happy_face"
        />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/congrats"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/iv_image"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_hits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="You hit 10 out of 10 questions"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message"

        />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Time: 00:03:45"
        android:fontFamily="@font/nunito"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hits"
        app:layout_constraintBottom_toTopOf="@id/btn_try_again"
        />


    <Button
        android:id="@+id/btn_try_again"
        android:text="@string/try_again"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        style="@style/pink_button" />



</androidx.constraintlayout.widget.ConstraintLayout>

